--- a/pong-frontend/package.json
+++ b/pong-frontend/package.json
@@ -21,6 +21,7 @@
     "@ngrx/effects": "^16.0.1",
     "@ngrx/store": "^16.0.1",
     "phaser": "^3.60.0",
+    "phaser3-nineslice": "^0.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
