--- a/pong-frontend/package.json
+++ b/pong-frontend/package.json
@@ -21,6 +21,7 @@
     "@ngrx/effects": "^16.0.1",
     "@ngrx/store": "^16.0.1",
     "@ngrx/store-devtools": "^16.0.1",
+    "ngx-socket-io": "^4.5.1",
     "phaser": "^3.60.0",
     "phaser3-nineslice": "^0.5.0",
     "rxjs": "~7.8.0",
