--- a/pong-server/package.json
+++ b/pong-server/package.json
@@ -22,9 +22,14 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.4.2",
+    "@nestjs/platform-ws": "^9.4.2",
     "@nestjs/websockets": "^9.4.2",
+    "@types/cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
+    "ngx-socket-io": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
