--- a/pong-frontend/.vscode/launch.json
+++ b/pong-frontend/.vscode/launch.json
@@ -7,14 +7,7 @@
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
+      "url": "http://10.12.9.10:4200/"
     },
-    {
-      "name": "ng test",
-      "type": "chrome",
-      "request": "launch",
-      "preLaunchTask": "npm: test",
-      "url": "http://localhost:9876/debug.html"
-    }
   ]
 }
