--- a/pong-server/package.json
+++ b/pong-server/package.json
@@ -29,6 +29,7 @@
     "@nestjs/websockets": "^9.4.2",
     "@types/cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
+    "matter-js": "^0.19.0",
     "ngx-socket-io": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
