--- a/pong-frontend/.vscode/launch.json
+++ b/pong-frontend/.vscode/launch.json
@@ -7,7 +7,7 @@
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "http://10.12.5.13:4200/"
+      "url": "$HOST"
     },
   ]
 }
