--- a/pong-server/package.json
+++ b/pong-server/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-ws": "^9.4.2",
     "@nestjs/websockets": "^9.4.2",
     "@types/cookie-parser": "^1.4.3",
+    "@types/matter-js": "^0.18.5",
     "cors": "^2.8.5",
     "matter-js": "^0.19.0",
     "ngx-socket-io": "^4.5.1",
