--- a/pong-frontend/package.json
+++ b/pong-frontend/package.json
@@ -26,6 +26,7 @@
     "phaser3-nineslice": "^0.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "webfontloader": "^1.6.28",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@angular/cli": "~16.0.4",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/webfontloader": "^1.6.35",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
