--- a/pong-server/package.json
+++ b/pong-server/package.json
@@ -30,6 +30,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/matter-js": "^0.18.5",
     "cors": "^2.8.5",
+    "flatbuffers": "^23.5.26",
     "matter-js": "^0.19.0",
     "ngx-socket-io": "^4.5.1",
     "reflect-metadata": "^0.1.13",
