--- a/pong-server/package.json
+++ b/pong-server/package.json
@@ -29,12 +29,14 @@
     "@nestjs/websockets": "^9.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/matter-js": "^0.18.5",
+    "@types/sat": "^0.0.32",
     "cors": "^2.8.5",
     "flatbuffers": "^23.5.26",
     "matter-js": "^0.19.0",
     "ngx-socket-io": "^4.5.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sat": "^0.9.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
