--- a/pong-server/package.json
+++ b/pong-server/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "nest": "nest",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -26,17 +27,21 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.4.2",
     "@nestjs/platform-ws": "^9.4.2",
+    "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^9.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/matter-js": "^0.18.5",
     "@types/sat": "^0.0.32",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "flatbuffers": "^23.5.26",
     "matter-js": "^0.19.0",
     "ngx-socket-io": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "sat": "^0.9.0"
+    "sat": "^0.9.0",
+    "sqlite3": "^5.1.6",
+    "typeorm": "^0.3.16"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
