--- a/pong-frontend/package.json
+++ b/pong-frontend/package.json
@@ -21,10 +21,12 @@
     "@ngrx/effects": "^16.0.1",
     "@ngrx/store": "^16.0.1",
     "@ngrx/store-devtools": "^16.0.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "flatbuffers": "^23.5.26",
     "ngx-socket-io": "^4.5.1",
     "phaser": "^3.60.0",
     "phaser3-nineslice": "^0.5.0",
+    "redux": "^4.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "webfontloader": "^1.6.28",
