--- a/pong-server/package.json
+++ b/pong-server/package.json
@@ -32,6 +32,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/matter-js": "^0.18.5",
     "@types/sat": "^0.0.32",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "flatbuffers": "^23.5.26",
