--- a/pong-frontend/package.json
+++ b/pong-frontend/package.json
@@ -37,6 +37,7 @@
     "@angular/cli": "~16.0.4",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.3.1",
     "@types/webfontloader": "^1.6.35",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
